# synth

instrument_mixer/: CMakeLists.txt  circularbuffer.h  circularbuffer.hpp  fft.cpp  fft.h  instrumentcontroller.cpp  instrumentcontroller.h  instrumentcontroller.ui  instrumentplayer.cpp  instrumentplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  spectrogram.cpp  spectrogram.h  spectrogram.ui
stk/src/: BeeThree.cpp  RtAudio.cpp
tone_slider/: CMakeLists.txt  instrumentplayer.cpp  instrumentplayer.h  instrumentslider.cpp  instrumentslider.h  instrumentslider.ui  main.cpp  mainwindow.ui  sineloop.cpp  sineloop.h  toneslider.cpp  toneslider.h  toneslider.ui
